--- a/app/src/main/res/layout/loginactivity.xml
+++ b/app/src/main/res/layout/loginactivity.xml
@@ -57,7 +57,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginTop="17dp"
-                    android:text="登录"
+                    android:text=""
                     android:textColor="#03b349"
                     android:textSize="20dp" />
 
