--- a/app/src/main/res/layout/find_password.xml
+++ b/app/src/main/res/layout/find_password.xml
@@ -23,7 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="找回密码"
-            android:textSize="@dimen/textsize_18"
+            android:textSize="@dimen/x15"
             android:textColor="#484848"
             android:layout_centerVertical="true"
             android:layout_centerHorizontal="true" />
