--- a/app/src/main/res/layout/home_header.xml
+++ b/app/src/main/res/layout/home_header.xml
@@ -7,7 +7,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="200dp" >
+        android:layout_height="@dimen/y100" >
 
         <android.support.v4.view.ViewPager
             android:id="@+id/viewpager"
@@ -21,7 +21,7 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_alignParentBottom="true"
-            android:layout_marginBottom="10dp" />
+            android:layout_marginBottom="@dimen/x10" />
     </RelativeLayout>
 
 <LinearLayout
@@ -37,7 +37,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="测试"
-            android:textSize="16sp"
+            android:textSize="@dimen/x14"
             android:drawableTop="@drawable/img_dynamic"
             android:gravity="center"
             android:drawablePadding="5dp"
@@ -55,7 +55,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="测试"
-            android:textSize="16sp"
+            android:textSize="@dimen/x14"
             android:drawableTop="@drawable/img_dynamic"
             android:gravity="center"
             android:drawablePadding="5dp"
@@ -75,7 +75,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="测试"
-            android:textSize="16sp"
+            android:textSize="@dimen/x14"
             android:drawableTop="@drawable/img_dynamic"
             android:gravity="center"
             android:drawablePadding="5dp"
@@ -94,7 +94,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="16sp"
+            android:textSize="@dimen/x14"
             android:drawableTop="@drawable/img_dynamic"
             android:gravity="center"
             android:drawablePadding="5dp"
