--- a/app/src/main/res/layout/home_header.xml
+++ b/app/src/main/res/layout/home_header.xml
@@ -37,7 +37,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="测试"
-            android:textSize="@dimen/x14"
+            android:textSize="14dp"
             android:drawableTop="@drawable/img_dynamic"
             android:gravity="center"
             android:drawablePadding="5dp"
@@ -55,7 +55,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="测试"
-            android:textSize="@dimen/x14"
+            android:textSize="14dp"
             android:drawableTop="@drawable/img_dynamic"
             android:gravity="center"
             android:drawablePadding="5dp"
@@ -75,7 +75,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="测试"
-            android:textSize="@dimen/x14"
+            android:textSize="14dp"
             android:drawableTop="@drawable/img_dynamic"
             android:gravity="center"
             android:drawablePadding="5dp"
@@ -94,7 +94,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/x14"
+            android:textSize="14dp"
             android:drawableTop="@drawable/img_dynamic"
             android:gravity="center"
             android:drawablePadding="5dp"
