--- a/app/src/main/res/layout/loginactivity.xml
+++ b/app/src/main/res/layout/loginactivity.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    android:background="@color/white"
-    android:orientation="vertical">
+    android:background="@color/white">
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fitsSystemWindows="true"
+        android:background="@color/white">
 
 
     <ImageView
@@ -248,12 +252,7 @@
             </LinearLayout>
         </ScrollView>
 
-
-
-
-
-
     </LinearLayout>
-
+    </RelativeLayout>
 
 </RelativeLayout>
