--- a/app/src/main/res/layout/more_fragment.xml
+++ b/app/src/main/res/layout/more_fragment.xml
@@ -112,7 +112,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/rl_erwiema"
+        android:id="@+id/rl_saoma"
         android:layout_marginTop="1dp"
         android:background="@color/white"
         >
@@ -186,6 +186,7 @@
             android:layout_centerInParent="true"
             android:textSize="@dimen/textsize_15"
             android:textColor="#484848"
+
             android:gravity="center"
             android:id="@+id/tv_out"
             android:layout_marginTop="50dp"
