--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -38,7 +38,7 @@
     <color name="status_text">#ffffff</color>
     <color name="viewfinder_mask">#50000000</color>
     <color name="react">#ffffff</color>
-    <color name="scanLineColor">#ffffff</color>
+    <color name="scanLineColor">#4aba53</color>
     <color name="defaultColor">#ffffff</color>
 
 </resources>
