--- a/app/src/main/res/layout/findfragment_layout.xml
+++ b/app/src/main/res/layout/findfragment_layout.xml
@@ -81,15 +81,16 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
-        <TextView
+        <ListView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="10dp"
-            android:background="@android:color/white"
-            android:text="aaaaaaaa" />
-        <!--<com.scwang.smartrefresh.layout.footer.ClassicsFooter-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"/>-->
+            android:background="@color/white"
+            android:id="@+id/lv_find" />
+
+        <com.scwang.smartrefresh.layout.footer.ClassicsFooter
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white" />
     </com.scwang.smartrefresh.layout.SmartRefreshLayout>
 
 
