--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -81,5 +81,30 @@
         <item name="android:background">#d4d8de</item>
     </style>
 
+    <style name="dialog_bottom">
+        <item name="android:windowEnterAnimation">@anim/dialog_buttom_in</item>
+        <item name="android:windowExitAnimation">@anim/dialog_buttom_out</item>
+    </style>
 
+
+    <declare-styleable name="WheelView">
+        <attr name="itemVisibleNum" format="integer" />
+
+        <attr name="textColorOuter" format="color" />
+        <attr name="textSizeOuter" format="dimension" />
+        <attr name="textColorCenter" format="color" />
+        <attr name="textSizeCenter" format="dimension" />
+
+        <attr name="lineColor" format="color" />
+
+        <attr name="isLoop" format="boolean" />
+        <attr name="lineSpaceingDimens" format="dimension" />
+
+        <attr name="wheelGravity" format="enum">
+            <enum name="left" value="234" />
+            <enum name="center" value="354" />
+            <enum name="right" value="894" />
+        </attr>
+
+    </declare-styleable>
 </resources>
